--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "clsx": "^1.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sass": "^1.62.0"
+    "sass": "^1.62.0",
+    "surge": "^0.23.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
